fix: multicolumn alignement

--- a/themes/bella/styles/section.multicolumn.scss
+++ b/themes/bella/styles/section.multicolumn.scss
@@ -25,6 +25,7 @@
     .items-area {
       display: grid;
       grid-template-columns: repeat(attr(data-nbr-columns-desktop number), 1fr);
+      align-items: flex-start;
       width: 100%;
       gap: var(--spacing-64);
 
